test/src/e2e_vm_tests/test_programs/should_pass/language/string_slice/string_slice_script/src/main.sw
script;

fn main(a: str) -> str {
    a
}
