test/src/e2e_vm_tests/test_programs/should_fail/simple_generics/src/main.sw
script;

fn do_it(x: u64) -> u64 {
    x
}

fn generic<T>(input: T) -> T {
    do_it(input)
}

fn main() -> u64 {
    generic(7u64)
}
